[package]
name = "code_pal"
version = "0.1.0"
authors = ["Miad <Miad.Abrin@d2l.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.14"
tui = { version = "0.8", default-features = false, features = ['crossterm'] }
structopt = "0.3.7"
rand = "0.7.2"
stderrlog = "0.4.3"
failure = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0.104" , features = ['rc','alloc','std','derive'] }
serde_json = "1.0"
dirs = "2.0"